--- a/app/WeChip.Web/WeChip.Web.csproj
+++ b/app/WeChip.Web/WeChip.Web.csproj
@@ -1,7 +1,18 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="3.1.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.7" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\WeChip.Access\WeChip.Access.csproj" />
+    <ProjectReference Include="..\WeChip.Data\WeChip.Data.csproj" />
+    <ProjectReference Include="..\WeChip.Domain\WeChip.Domain.csproj" />
+  </ItemGroup>
 
 </Project>
