--- a/app/WeChip.Web/appsettings.json
+++ b/app/WeChip.Web/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "WeChip": "Server=(localdb)\\mssqllocaldb;Database=WeChip;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
