--- a/app/WeChip.WebAPI/WeChip.WebAPI.csproj
+++ b/app/WeChip.WebAPI/WeChip.WebAPI.csproj
@@ -4,5 +4,16 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="3.1.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.7" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\WeChip.Access\WeChip.Access.csproj" />
+    <ProjectReference Include="..\WeChip.Data\WeChip.Data.csproj" />
+    <ProjectReference Include="..\WeChip.Domain\WeChip.Domain.csproj" />
+  </ItemGroup>
+
 
 </Project>
